project1/deploy-bar.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      name: pod-bar
      labels:
        app: bar
 
    spec:
      containers:
        - name: container-bar
          image: whatwant/node-web:1.0
          ports:
            - containerPort: 8080
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: service-bar
spec:
  selector:
    app: bar
  ports:
    - port: 8000
      targetPort: 8080
